Minor alignment fixes, added top padding for when the two tables become stacked

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -148,6 +148,12 @@ body {
     margin-top: 10px;
 }
 
+.class-table-column-div {
+    text-align: center;
+    padding-top: 15px;
+}
+
+
 .hidden {
     display: none;
 }
@@ -247,6 +253,7 @@ body {
 
 .qtable {
     background-color: white;
+    text-align: center;
 }
 
 .qtable1 {
